# saudi-podcasts-segmentation

./: README.md  pyproject.toml
colab_notebook/: saudi_podcasts_segmentation.ipynb
locally/: audio_segmentatio.ipynb  dockerfile  requirements.txt
